# pyautomaton

./: .gitignore  MANIFEST.in  README.md  config.ini  setup.cfg
docs/source/: conf.py
src/credit_karma_bot/: application.py  locators.py
src/credit_karma_bot/locators/: locators.py
src/credit_karma_bot/model/: application.py
src/credit_karma_bot/pages/: internal_page.py  login_page.py  page.py
src/pyautomaton/: PyAutomaton.py  __main__.py  py_automaton.py
