[metadata]
name = pyautomaton
version = 0.0.1
author = Ryan Warrick
author_email = ryanwarrick1@gmail.com
description = Python utility to automate various repetitive web-based tasks with Selenium.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
url = https://github.com/ryanwarrick/pyautomaton
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = 
    selenium

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyautomaton=pyautomaton.__main__:main

[options.extras_require]
test = pytest

[build_sphinx]
project = 'pyautomaton'
version = 0.1
release = 0.1.1
source-dir = 'docs'
